modified:   api/common/common/database.go 	deleted:    api/rule/actions/action.go 	deleted:    api/rule/actions/db_action.go 	modified:   api/rule/actions/mqtt_action.go 	modified:   api/rule/actions/ws_action.go 	deleted:    api/rule/lexer.go 	deleted:    api/rule/matcher.go 	deleted:    api/rule/parser.go 	deleted:    api/rule/token_statck.go 	modified:   api/server/controller/fence_controller.go 	modified:   api/server/dao/fence_dao.go 	modified:   api/server/router/company_router.go 	modified:   api/server/router/fence_router.go 	modified:   api/server/service/company_service.go 	modified:   api/server/service/fence_service.go 	modified:   api/sys/iot/monitor/connection.go 	modified:   api/sys/iot/monitor/fence_jobs.go 	deleted:    build/go-backend 	modified:   config/application.yaml 	modified:   docs/docs.go 	modified:   docs/swagger.json 	modified:   docs/swagger.yaml 	modified:   go.mod 	modified:   go.sum 	modified:   main.go 	modified:   scripts/build.bat 	api/rule/accepter/ 	api/rule/actions/action_channels.go 	api/rule/actions/init.go 	api/rule/funcondition/ 	api/rule/ruleparser/ 	api/rule/scheduler/ 	api/server/controller/rule_controller.go 	api/server/dao/rule_dao.go 	api/server/entity/rule.go 	api/server/router/rule_router.go 	api/server/service/rule_service.go 	api/server/tools/util/is_float_qual.go 	api/server/tools/util/stack.go 	api/server/vo/rule_info.go 	build/ 	"\345\234\243\347\273\217.pdf"
